--- a/src/main/resources/huffman/decompressor/hab/gui/Error-scene.fxml
+++ b/src/main/resources/huffman/decompressor/hab/gui/Error-scene.fxml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" prefHeight="277.0" prefWidth="298.0" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="huffman.decompressor.hab.gui.HelloController">
+<VBox alignment="CENTER" prefHeight="277.0" prefWidth="298.0" spacing="20.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="huffman.decompressor.hab.gui.HelloController">
     <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
+   <Label fx:id="error" alignment="TOP_LEFT" prefHeight="20.0" prefWidth="260.0" text="ERROR!"/>
+   <Label fx:id="errorCode" prefHeight="18.0" prefWidth="260.0" text="Error code: " />
+   <Label fx:id="errorMessage" prefHeight="18.0" prefWidth="260.0" text="Error message:" />
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Kliknij" onAction="#nobasek"/>
+    <Label fx:id="welcomeText" prefHeight="18.0" prefWidth="80.0" />
+    <Button onAction="#nobasek" text="Kliknij" />
 </VBox>
