--- a/src/main/resources/huffman/decompressor/hab/gui/Tree-View.fxml
+++ b/src/main/resources/huffman/decompressor/hab/gui/Tree-View.fxml
@@ -3,18 +3,27 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" prefHeight="447.0" prefWidth="554.0" spacing="20.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="huffman.decompressor.hab.gui.HelloController">
+<VBox alignment="CENTER" prefHeight="447.0" prefWidth="554.0" spacing="20.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="huffman.decompressor.hab.gui.HelloController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
    <children>
       <Pane prefHeight="450.0" prefWidth="514.0">
          <children>
-            <Label fx:id="ShowTree" layoutX="22.0" layoutY="13.0" text="Tree" />
-            <Button layoutX="231.0" layoutY="368.0" mnemonicParsing="false" text="MakeIt" onAction="#draw" />
+            <Label fx:id="ShowTree" layoutX="36.0" layoutY="22.0" text="Tree" />
+            <ScrollPane layoutX="-20.0" layoutY="-21.0" prefHeight="447.0" prefWidth="554.0">
+               <content>
+                  <Pane prefHeight="445.0" prefWidth="554.0">
+                     <children>
+                        <Button layoutX="309.0" layoutY="98.0" mnemonicParsing="false" onAction="#draw" text="MakeIt" />
+                     </children>
+                  </Pane>
+               </content>
+            </ScrollPane>
          </children>
       </Pane>
    </children>
