--- a/src/main/resources/huffman/decompressor/hab/gui/Final-and-tree-there-is.fxml
+++ b/src/main/resources/huffman/decompressor/hab/gui/Final-and-tree-there-is.fxml
@@ -6,7 +6,12 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" prefHeight="369.0" prefWidth="378.0" spacing="20.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="huffman.decompressor.hab.gui.HelloController">
+<VBox
+        alignment="TOP_LEFT" prefWidth="1360" prefHeight="720" spacing="20.0"
+        xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
+        fx:controller="huffman.decompressor.hab.gui.TreeViewSceneController"
+        stylesheets="@styles/main.css"
+>
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
