--- a/src/main/resources/huffman/decompressor/hab/gui/hello-view.fxml
+++ b/src/main/resources/huffman/decompressor/hab/gui/hello-view.fxml
@@ -5,13 +5,18 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" prefHeight="277.0" prefWidth="298.0" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17" fx:controller="huffman.decompressor.hab.gui.HelloController">
+<VBox
+        alignment="TOP_LEFT" prefWidth="1360" prefHeight="720" spacing="20.0"
+        xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17"
+        fx:controller="huffman.decompressor.hab.gui.HelloController"
+        stylesheets="@styles/main.css"
+>
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-    <Button onAction="#onHelloButtonClick" text="Hello" />
-    <Button onAction="#openFileExplorer" text="FindTheFIle" />
-    <Button onAction="#changingScreens" text="GetParameters" />
+    <Label fx:id="welcomeText" text="HAB Decompressor" styleClass="main-title" prefHeight="20.0"/>
+    <VBox alignment="CENTER" prefWidth="1340" prefHeight="720" spacing="20.0">
+        <Button onAction="#getFileDataAndGoToScene" text="FindTheFIle" />
+    </VBox>
 
-    <Label fx:id="welcomeText" />
 </VBox>
