--- a/src/main/resources/huffman/decompressor/hab/gui/Correct-verified-file-scene.fxml
+++ b/src/main/resources/huffman/decompressor/hab/gui/Correct-verified-file-scene.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.text.Text?>
 <VBox
         prefWidth="1360" prefHeight="720" spacing="20.0"
         xmlns="http://javafx.com/javafx/17"
@@ -26,10 +27,11 @@
       <Pane prefHeight="186.0" prefWidth="676.0">
          <children>
             <Label fx:id="noText" layoutX="14.0" layoutY="54.0" />
+            <Text fx:id="passInput" layoutX="234.0" layoutY="122.0" text="" />
             <Button fx:id="toDecompress" layoutX="574.0" layoutY="122.0" mnemonicParsing="false" onAction="#switchToFinalScene" text="Decompress" />
-            <Button layoutX="14.0" layoutY="122.0" onAction="#getFileInfo" text="Show Info" />
+            <Button fx:id="toDecrypt" layoutX="574.0" layoutY="122.0" mnemonicParsing="false" onAction="#switchToFinalScene" text="Decrypt" />
             <Button layoutX="574.0" layoutY="20.0" mnemonicParsing="false" onAction="#fileWhereWillBeDecompressed" text="FindFIle" />
-            <Label fx:id="outfile" layoutY="24.0" prefHeight="17.0" prefWidth="554.0" text="Outfile: " />
+            <Label fx:id="outfile" layoutY="24.0" prefHeight="17.0" prefWidth="554.0" text="Outfile: [default: ./result.txt]" />
          </children>
       </Pane>
       <Accordion />
