--- a/src/main/resources/huffman/decompressor/hab/gui/hello-view.fxml
+++ b/src/main/resources/huffman/decompressor/hab/gui/hello-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.VBox?>
 
 <VBox
-        alignment="TOP_LEFT" prefWidth="1360" prefHeight="720" spacing="20.0"
+        prefWidth="1360" prefHeight="720" spacing="20.0"
         xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17"
         fx:controller="huffman.decompressor.hab.gui.HelloController"
         stylesheets="@styles/main.css"
@@ -15,7 +15,7 @@
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
     <Label fx:id="welcomeText" text="HAB Decompressor" styleClass="main-title" prefHeight="20.0"/>
-    <VBox alignment="CENTER" prefWidth="1340" prefHeight="720" spacing="20.0">
+    <VBox alignment="CENTER" prefWidth="1360" prefHeight="700" spacing="20.0">
         <Button onAction="#getFileDataAndGoToScene" text="FindTheFIle" />
     </VBox>
 
