--- a/src/main/resources/huffman/decompressor/hab/gui/Correct-verified-file-scene.fxml
+++ b/src/main/resources/huffman/decompressor/hab/gui/Correct-verified-file-scene.fxml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.TextField?>
 <VBox
         prefWidth="1360" prefHeight="720" spacing="20.0"
         xmlns="http://javafx.com/javafx/17"
@@ -20,20 +19,20 @@
 </padding>
    <Label fx:id="welcomeText" text="HAB Decompressor" styleClass="main-title" prefHeight="20.0"/>
    <VBox fillWidth="800"  spacing="8.0">
-      <Label fx:id="filePath" prefHeight="18.0" prefWidth="692.0" text="File path:" />
+      <Label fx:id="filePath" prefHeight="18.0" text="File path:" />
       <Label fx:id="compressed" graphicTextGap="2.0" prefHeight="18.0" prefWidth="697.0" text="Compressed: "/>
       <Label fx:id="encrypted" graphicTextGap="2.0" prefHeight="18.0" prefWidth="687.0" text="Encrypted: " />
       <Label fx:id="fileSize" graphicTextGap="2.0" prefHeight="18.0" prefWidth="687.0" text="Encrypted: " />
       <Pane prefHeight="186.0" prefWidth="676.0">
-         <children>
-            <Label fx:id="noText" layoutX="14.0" layoutY="54.0" />
-            <Text fx:id="passInput" layoutX="234.0" layoutY="122.0" text="" />
-            <Button fx:id="toDecompress" layoutX="574.0" layoutY="122.0" mnemonicParsing="false" onAction="#switchToFinalScene" text="Decompress" />
-            <Button fx:id="toDecrypt" layoutX="574.0" layoutY="122.0" mnemonicParsing="false" onAction="#switchToFinalScene" text="Decrypt" />
-            <Button layoutX="574.0" layoutY="20.0" mnemonicParsing="false" onAction="#fileWhereWillBeDecompressed" text="FindFIle" />
-            <Label fx:id="outfile" layoutY="24.0" prefHeight="17.0" prefWidth="554.0" text="Outfile: [default: ./result.txt]" />
-         </children>
+         <TextField fx:id="passInput" layoutY="122.0" prefHeight="18.0" prefWidth="200"/>
+         <Button fx:id="toDecompress" layoutX="240" layoutY="122.0" mnemonicParsing="false"
+                 onAction="#switchToFinalScene" text="Decompress"/>
+         <Button fx:id="toDecrypt" layoutX="240" layoutY="122.0" mnemonicParsing="false"
+                 onAction="#switchToFinalScene" text="Decrypt"/>
+         <Label fx:id="outfile" layoutY="24.0" prefHeight="17.0" prefWidth="554.0"
+                text="Outfile: [.decompressed/result.txt]"/>
+         <Label fx:id="status" layoutY="50.0" prefHeight="17.0" prefWidth="554.0"/>
       </Pane>
-      <Accordion />
+      <Button onAction="#setToPrimaryScene" text="Back" />
    </VBox>
 </VBox>
