--- a/src/main/resources/huffman/decompressor/hab/gui/Final-and-tree-there-is.fxml
+++ b/src/main/resources/huffman/decompressor/hab/gui/Final-and-tree-there-is.fxml
@@ -18,10 +18,12 @@
    <children>
       <Pane prefHeight="322.0" prefWidth="338.0">
          <children>
-            <Label fx:id="action_time" layoutX="14.0" layoutY="14.0" text="Action time: " />
-            <Label fx:id="new_file_size" layoutX="12.0" layoutY="39.0" text="New file size: " />
-            <Label fx:id="new_file_path" layoutX="11.0" layoutY="66.0" text="New file path: " />
-            <Button layoutX="133.0" layoutY="214.0" mnemonicParsing="false" text="WatchTree" onAction="#switchToTreeView"/>
+            <Label fx:id="action_time" layoutX="12.0" layoutY="20.0" text="Action time: " />
+            <Label fx:id="new_file_size" layoutX="12.0" layoutY="40.0" text="New file size: " />
+            <Label fx:id="new_file_path" layoutX="12.0" layoutY="60.0" text="New file path: " />
+            <Button layoutX="12.0" layoutY="100.0" mnemonicParsing="false" text="WatchTree" onAction="#switchToTreeView"/>
+             <Button onAction="#setToPrimaryScene" text="Back" layoutX="150.0" layoutY="100.0" />
+             <Label fx:id="status" />
          </children>
       </Pane>
    </children>
