--- a/src/main/resources/huffman/decompressor/hab/gui/hello-view.fxml
+++ b/src/main/resources/huffman/decompressor/hab/gui/hello-view.fxml
@@ -16,6 +16,7 @@
     </padding>
     <Label fx:id="welcomeText" text="HAB Decompressor" styleClass="main-title" prefHeight="20.0"/>
     <VBox alignment="CENTER" prefWidth="1360" prefHeight="700" spacing="20.0">
+        <Label fx:id="status" />
         <Button onAction="#getFileDataAndGoToScene" text="FindTheFIle" />
     </VBox>
 
